force updated range when encountering variable declaration

BUG: 262189